--- a/client-side/package.json
+++ b/client-side/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite": "^4.0.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
@@ -19,7 +20,6 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6",
-    "vite": "^4.1.0"
+    "tailwindcss": "^3.2.6"
   }
 }
