--- a/client-side/package.json
+++ b/client-side/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "redux": "^4.2.1",
     "vite": "^4.0.4"
   },
   "devDependencies": {
