--- a/client-side/package.json
+++ b/client-side/package.json
@@ -12,8 +12,10 @@
     "@tailwindcss/typography": "^0.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "vite": "^4.0.4"
   },
   "devDependencies": {
